k8s/namespace.yaml
# TODO: Create a Namespace named '<yourname>-paper'
apiVersion: v1
kind: Namespace
metadata:
  name: katie-paper
