k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: katie-paper
  namespace: katie-paper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: katie-paper
  template:
    metadata:
      labels:
        app: katie-paper
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: paper
          image: ghcr.io/0x1malia/msud-paper-gitops-lab:latest
          ports:
            - containerPort: 25565
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          volumeMounts:
            - name: config
              mountPath: /server/server.properties
              subPath: server.properties
            - name: world
              mountPath: /server/world
          readinessProbe:
            tcpSocket:
              port: 25565
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: config
          configMap:
            name: katie-paper-config
        - name: world
          persistentVolumeClaim:
            claimName: katie-paper-world
