k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: katie-paper
  namespace: katie-paper
spec:
  type: ClusterIP
  selector:
    app: katie-paper
  ports:
    - port: 25565
      targetPort: 25565
